[package]
name = "voxels2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.19"
petgraph = "0.6.3"
pollster = "0.3.0"
serde = { version="1.0", features=["derive"] }
thiserror = "1.0"
uuid = { version="1.4.1", features=["v4", "fast-rng"] }
wgpu = { version="0.17.0", features=["serde"] }
winit = "0.28.6"
